--- a/Fake_news_prediction.ipynb
+++ b/Fake_news_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjNaJ9WVrLeXMkMIqX63pZ",
+      "authorship_tag": "ABX9TyPSrSEVgWD91Gd2Ci5Dt/0x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "WHUmM6rua9x0"
       },
@@ -82,9 +82,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i_MgMJ7vd9-R",
-        "outputId": "ab7326a7-13d4-4ce3-faf3-ab60a124232a"
+        "outputId": "5654ca8d-9d54-4bf2-bec3-033367cd04fc"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fANmfrJcgNVx",
-        "outputId": "9a3dae07-b470-4bd8-dc12-76a57e45ea27"
+        "outputId": "9b7e97d9-8153-4153-a6a7-38b82ff7780f"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,12 +135,12 @@
       "source": [
         "#data preprocessing\n",
         "#loading the dataset to a pandas dataframe\n",
-        "news_dataset= pd.read_csv('/content/train.csv')\n"
+        "news_dataset = pd.read_csv('/content/train.csv')\n"
       ],
       "metadata": {
         "id": "bd0jXkHvgex6"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -154,9 +154,9 @@
           "height": 206
         },
         "id": "31tPbztBhIt4",
-        "outputId": "90f97ed5-66e5-43c2-f1e9-5cc4321bcd62"
+        "outputId": "4d7ba1d5-dea6-4679-81af-1e9c345e6fdf"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0ac11c49-85c3-4c23-8a02-7d18d098a2d1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-96cdf57f-621a-40f5-b0b2-0944c2143573\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -251,7 +251,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ac11c49-85c3-4c23-8a02-7d18d098a2d1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-96cdf57f-621a-40f5-b0b2-0944c2143573')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -303,12 +303,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0ac11c49-85c3-4c23-8a02-7d18d098a2d1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-96cdf57f-621a-40f5-b0b2-0944c2143573 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0ac11c49-85c3-4c23-8a02-7d18d098a2d1');\n",
+              "        const element = document.querySelector('#df-96cdf57f-621a-40f5-b0b2-0944c2143573');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -328,9 +328,9 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c51bdc92-1d20-4f36-ba4e-b01736ca7c94\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c51bdc92-1d20-4f36-ba4e-b01736ca7c94')\"\n",
-              "            title=\"Suggest charts.\"\n",
+              "<div id=\"df-a82cf9f5-bc98-4c0c-97f4-421411c45774\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a82cf9f5-bc98-4c0c-97f4-421411c45774')\"\n",
+              "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
               "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
@@ -448,7 +448,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c51bdc92-1d20-4f36-ba4e-b01736ca7c94 button');\n",
+              "        document.querySelector('#df-a82cf9f5-bc98-4c0c-97f4-421411c45774 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -459,7 +459,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -473,9 +473,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RdVgxIWBhN-Y",
-        "outputId": "98be9562-2557-4344-abb8-a7c79abc3670"
+        "outputId": "3dc21e7b-d830-43ed-db25-e41212d16220"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -499,9 +499,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6KSoc1iahUEn",
-        "outputId": "3e4dfdd2-093a-4d38-c20a-f360ef5f00e2"
+        "outputId": "5cf3baad-7d75-4a42-9a1a-fde2500b2d63"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -516,15 +516,148 @@
             ]
           },
           "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#replacing the null values with empty string\n",
+        "news_dataset= news_dataset.fillna('')"
+      ],
+      "metadata": {
+        "id": "Ejw_KcrUhfYP"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "news_dataset.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "CVN9lDhc3e5V",
+        "outputId": "2c9b0b61-4d79-4343-b9a2-a7b917658646",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "id        0\n",
+              "title     0\n",
+              "author    0\n",
+              "text      0\n",
+              "label     0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
           "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#merging the author name and title\n",
+        "news_dataset ['content']= news_dataset['title']+' '+news_dataset['author']"
+      ],
       "metadata": {
-        "id": "Ejw_KcrUhfYP"
+        "id": "53wmBsrW3hd1"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(news_dataset)"
+      ],
+      "metadata": {
+        "id": "ysDYRQHk4WUV",
+        "outputId": "bab0cca1-a082-4c58-ca91-a290ad7123d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "          id                                              title  \\\n",
+            "0          0  House Dem Aide: We Didn’t Even See Comey’s Let...   \n",
+            "1          1  FLYNN: Hillary Clinton, Big Woman on Campus - ...   \n",
+            "2          2                  Why the Truth Might Get You Fired   \n",
+            "3          3  15 Civilians Killed In Single US Airstrike Hav...   \n",
+            "4          4  Iranian woman jailed for fictional unpublished...   \n",
+            "...      ...                                                ...   \n",
+            "20795  20795  Rapper T.I.: Trump a ’Poster Child For White S...   \n",
+            "20796  20796  N.F.L. Playoffs: Schedule, Matchups and Odds -...   \n",
+            "20797  20797  Macy’s Is Said to Receive Takeover Approach by...   \n",
+            "20798  20798  NATO, Russia To Hold Parallel Exercises In Bal...   \n",
+            "20799  20799                          What Keeps the F-35 Alive   \n",
+            "\n",
+            "                                          author  \\\n",
+            "0                                  Darrell Lucus   \n",
+            "1                                Daniel J. Flynn   \n",
+            "2                             Consortiumnews.com   \n",
+            "3                                Jessica Purkiss   \n",
+            "4                                 Howard Portnoy   \n",
+            "...                                          ...   \n",
+            "20795                              Jerome Hudson   \n",
+            "20796                           Benjamin Hoffman   \n",
+            "20797  Michael J. de la Merced and Rachel Abrams   \n",
+            "20798                                Alex Ansary   \n",
+            "20799                              David Swanson   \n",
+            "\n",
+            "                                                    text  label  \\\n",
+            "0      House Dem Aide: We Didn’t Even See Comey’s Let...      1   \n",
+            "1      Ever get the feeling your life circles the rou...      0   \n",
+            "2      Why the Truth Might Get You Fired October 29, ...      1   \n",
+            "3      Videos 15 Civilians Killed In Single US Airstr...      1   \n",
+            "4      Print \\nAn Iranian woman has been sentenced to...      1   \n",
+            "...                                                  ...    ...   \n",
+            "20795  Rapper T. I. unloaded on black celebrities who...      0   \n",
+            "20796  When the Green Bay Packers lost to the Washing...      0   \n",
+            "20797  The Macy’s of today grew from the union of sev...      0   \n",
+            "20798  NATO, Russia To Hold Parallel Exercises In Bal...      1   \n",
+            "20799    David Swanson is an author, activist, journa...      1   \n",
+            "\n",
+            "                                                 content  \n",
+            "0      House Dem Aide: We Didn’t Even See Comey’s Let...  \n",
+            "1      FLYNN: Hillary Clinton, Big Woman on Campus - ...  \n",
+            "2      Why the Truth Might Get You Fired Consortiumne...  \n",
+            "3      15 Civilians Killed In Single US Airstrike Hav...  \n",
+            "4      Iranian woman jailed for fictional unpublished...  \n",
+            "...                                                  ...  \n",
+            "20795  Rapper T.I.: Trump a ’Poster Child For White S...  \n",
+            "20796  N.F.L. Playoffs: Schedule, Matchups and Odds -...  \n",
+            "20797  Macy’s Is Said to Receive Takeover Approach by...  \n",
+            "20798  NATO, Russia To Hold Parallel Exercises In Bal...  \n",
+            "20799            What Keeps the F-35 Alive David Swanson  \n",
+            "\n",
+            "[20800 rows x 6 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#separating the data and label\n",
+        "x= news_dataset"
+      ],
+      "metadata": {
+        "id": "hq6OO0gz4xzk"
       },
       "execution_count": null,
       "outputs": []
